@@ -23,7 +23,8 @@
 #'   R_RROWCPY2, R_PDMVSUM, R_DHILBMK, R_PDHILBMK, R_PDMKCPN1, 
 #'   R_PDGEQPF, R_PDORGQR, R_PDORMQR, 
 #'   R_PDGETRI, R_PDGESV, R_PDGESVD, R_PDSYEV, R_PDPOTRF, R_PDSYEVX, 
-#'   R_PDGETRF, R_PDLANGE, R_PDTRCON, R_PDGECON, R_PDGEMR2D
+#'   R_PDGETRF, R_PDLANGE, R_PDTRCON, R_PDGECON, R_PDGEMR2D,
+#'   R_g2lcoord
 #' 
 #' @name pbdBASE-package
 #' @docType package
